# MultiMode_Reflector

./: README.md
bootstrap/: make_reflector_step1.sh
multimode-reflector/: .gitignore  CMakeLists.txt  PROJECT_STATE.md  dstar_burst  dstar_eot  dstar_late  dstar_listener  dstar_rollover  dstar_sequence  dstar_stream  dstar_test  dstar_voice  packet_replay  reflector.ini  tools_dstar_burst.cpp  tools_dstar_eot.cpp  tools_dstar_late.cpp  tools_dstar_listener.cpp  tools_dstar_rollover.cpp  tools_dstar_sequence.cpp  tools_dstar_stream.cpp  tools_dstar_test.cpp  tools_dstar_voice.cpp  ysf_analyze  ysf_listener
multimode-reflector/captures/ysf/: manual_test.txt  manual_test.txtCtrl+C
multimode-reflector/config/: reflector.ini
multimode-reflector/docs/: architecture.md  milestones.md  routing.md  transcoding.md
multimode-reflector/scripts/: analyze_last_ysf_capture.sh  build.sh  capture_ysf.sh  install.sh  test_dmr_to_ysf_scaffold.sh  test_dstar_to_ysf.sh
multimode-reflector/src/: main.cpp
multimode-reflector/src/core/: active_stream.cpp  active_stream.h  ambe_device_manager.cpp  ambe_device_manager.h  ambe_device_status.cpp  ambe_device_status.h  ambe_protocol.cpp  ambe_protocol.h  audio_level_config.cpp  audio_level_config.h  audio_level_manager.cpp  audio_level_manager.h  codec_frame.h  codec_manager.cpp  codec_manager.h  codec_router.cpp  codec_router.h  config_manager.cpp  config_manager.h  debug_udp_sender.cpp  debug_udp_sender.h  device_discovery.cpp  device_discovery.h  hex_dump.cpp  hex_dump.h  jitter_buffer.cpp  jitter_buffer.h  lastheard_manager.cpp  lastheard_manager.h  logger.cpp  logger.h  loop_guard.cpp  loop_guard.h  media_destination.h  media_frame.h  media_frame_type.h  media_lifecycle.cpp  media_lifecycle.h  media_output_queue.cpp  media_output_queue.h  (+38 more)
multimode-reflector/src/net/: epoll_server.cpp  epoll_server.h  global_peer_registry.cpp  global_peer_registry.h  global_protocol_router.cpp  global_protocol_router.h  listener_socket.h  protocol_listener.h  protocol_listener_registry.cpp  protocol_listener_registry.h  protocol_network_router.cpp  protocol_network_router.h  protocol_peer.h  protocol_peer_registry.cpp  protocol_peer_registry.h  xlxd_frame_packet.cpp  xlxd_frame_packet.h  xlxd_handshake_packet.cpp  xlxd_handshake_packet.h  xlxd_peer_listener.cpp  xlxd_peer_listener.h  xlxd_peer_monitor.cpp  xlxd_peer_monitor.h  xlxd_peer_registrar.cpp  xlxd_peer_registrar.h  xlxd_poll_packet.cpp  xlxd_poll_packet.h
multimode-reflector/src/protocol/: bridge_frame.h  bridge_frame_constants.h  dmr_network_builder.cpp  dmr_network_builder.h  dmr_network_frame.cpp  dmr_network_frame.h  dmr_protocol.cpp  dmr_protocol.h  dmr_voice_frame.cpp  dmr_voice_frame.h  dstar_encoder.cpp  dstar_encoder.h  dstar_header.cpp  dstar_header.h  dstar_network_frame.cpp  dstar_network_frame.h  dstar_protocol.cpp  dstar_protocol.h  dstar_session.cpp  dstar_session.h  m17_protocol.cpp  m17_protocol.h  m17_scaffold_frame.cpp  m17_scaffold_frame.h  nxdn_network_builder.cpp  nxdn_network_builder.h  nxdn_protocol.cpp  nxdn_protocol.h  nxdn_scaffold_frame.cpp  nxdn_scaffold_frame.h  p25_protocol.cpp  p25_protocol.h  p25_scaffold_frame.cpp  p25_scaffold_frame.h  protocol.h  protocol_bit_buffer.h  protocol_capabilities.cpp  protocol_capabilities.h  protocol_crc.h  protocol_definitions.h  (+27 more)
multimode-reflector/src/system/: timer.cpp  timer.h
multimode-reflector/src/util/: config.cpp  config.h
multimode-reflector/systemd/: reflector.service
multimode-reflector/tools/: packet_replay.cpp  probe_thumbdv.py  send_bad_xlxd_poll.py  send_fake_dmr.py  send_fake_m17.py  send_fake_nxdn.py  send_fake_p25.py  send_fake_xlxd_frame.py  send_valid_xlxd_dstar_frame.py  ysf_analyze.cpp  ysf_listener.cpp  ysf_packet_dump.cpp
